--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Валентинки</title>
+
   <link rel="stylesheet" href="style.css">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
 
 <div id="start-screen">
-  <h1>
-    Поздравьте вторую половинку и друзей с 14 февраля 💝
-  </h1>
-  <p>
-    Выберите валентинку, которая вам больше всего нравится
-  </p>
-  <button id="start-btn">Нажмите на экран</button>
+  <h1>Поздравьте близких с 14 февраля 💝</h1>
+  <p>Листайте и нажмите на понравившуюся валентинку</p>
+  <button id="start-btn">Начать</button>
 </div>
 
 <div id="app" class="hidden">
