--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-<body>
+<<body>
+
+<div class="bg"></div>
 
 <div id="start-screen">
   <h1>Поздравьте близких с 14 февраля 💝</h1>
@@ -23,4 +25,5 @@
 
 <script src="app.js"></script>
 </body>
+  
 </html>
